--- a/templates/etc/openldap/ldap.conf.erb
+++ b/templates/etc/openldap/ldap.conf.erb
@@ -6,6 +6,7 @@ SIZELIMIT           <%= @sizelimit %>
 TIMELIMIT           <%= @timelimit %>
 DEREF               <%= @deref %>
 <% if @use_tls -%>
+TLS_CACERT          <%= @app_pki_ca_dir %>/cacerts.pem
 TLS_CACERTDIR       <%= @app_pki_ca_dir %>
 TLS_CIPHER_SUITE    <%= Array(@_tls_cipher_suite).join(':') %>
 TLS_REQCERT         <%= @tls_reqcert %>
